--- a/style/login.css
+++ b/style/login.css
@@ -130,11 +130,20 @@ input:-webkit-autofill {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(255, 255, 255, 0.9); /* Light transparent background */
-  display: none; /* ✅ Initially hidden */
+  background: rgba(66, 6, 122, 0.9);
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: 9999;
+}
+
+#lottie-animation {
+  width: 300px;
+  height: 300px;
+  background: rgb(255, 255, 255);
+  border-radius: 50%;
+  padding: 20px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 }
 
 .hidden {
