--- a/style/followus.css
+++ b/style/followus.css
@@ -232,7 +232,7 @@
 
       .menu-toggle {
         display: block; 
-        margin: 10px auto; /
+        margin: 10px auto;
       }
     
       .nav-links {
